Product Page JS code

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -57,7 +57,7 @@
               <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
             </article>
           </a> 
-          Fin Exemple affichage produit-->
+          Fin Exemple affichage produit -->
         </section>
       </div>
     </main>
@@ -85,6 +85,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/script.js"></script> <!-- Chargement du code JavaScript -->
+  <script src="../js/listAllKanaps.js"></script> <!-- Chargement du code JavaScript -->
   </body>
 </html>
