--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/Smalgoire/PROJET-5/front/html/index.html">
+<meta http-equiv="refresh" content="0; url=front/html/index.html">
